recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:9: error: identifier expected but ')' found.
  gauche(angle*2.)
                 ^